syntax = "proto3";

package notice.service.v1;

option go_package = "violin-notice/pkg/service/reminder.service.v1";

message ReminderMessage {
  string tenantId = 1;
  string reminderId = 2;
  string title = 3;
  string info = 4;
  string time = 5;
  repeated string type = 6;
};

message ReminderResponse {};

message SelectReminderResponse {
  repeated ReminderMessage response = 1;
};

service ReminderService {
  rpc CreateReminder(ReminderMessage) returns (ReminderResponse) {}
  rpc UpdateReminder(ReminderMessage) returns (ReminderResponse) {}
  rpc DeleteReminder(ReminderMessage) returns (ReminderResponse) {}
  rpc SelectReminder(ReminderMessage) returns (SelectReminderResponse) {}
}


